--- a/Guanabara/Aulas/5 - Condições/index.html
+++ b/Guanabara/Aulas/5 - Condições/index.html
@@ -4,38 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DETRAN</title>
+    <title>Detran</title>
 </head>
-
-
-
-
 <body>
-
     <h1>Sistema de multas</h1>
-
-    Velocidade do carro: <input type="number" name="txtvel" id="txtvel">  Km/h
-
+    <input type="number" name="txtvel" id="txtvel"> Km/h
     <input type="button" value="Verificar" onclick="calcular()">
-
-    <div id="res">
-
-    </div>
-
-
+    <div id="res"></div>
     <script>
+        
         function calcular() {
-            var txtv = window.document.querySelector('input#txtvel')
-            var res = window.document.querySelector('div#res')
+            var txtv = window.document.getElementById('txtvel')
+            var res = window.document.getElementById('res')
             var vel = Number(txtv.value)
-            res.InnerHTML = `Sua velocidade atual é de ${vel}km/h`
-            if (vel > 60) {
-                res.InnerHTML += `Você está sendo multado por excesso de velocidade`
+            res.innerHTML = ` <p>Sua velociade atual é de ${vel} Km/h</p>`
+            if (vel > 60 ) {
+                res.innerHTML += `<p>Você está multado por excesso de velocidade</p>`
             }
-            res.InnerHTML += `Dirija com cinto de segurança`
+            res.innerHTML += `<p>Dirija sempre com cinto de segurança</p>`
         }
     </script>
-
-
 </body>
 </html>
