--- a/Guanabara/Aulas/Exercicios/4/index.html
+++ b/Guanabara/Aulas/Exercicios/4/index.html
@@ -16,13 +16,14 @@
 
 
             <div>
-                <p>Número: <input type="number" name="num" id="num"> <input type="button" value="Gerar tabuada"></p>
+                <p>Número: <input type="number" name="num" id="num"> <input type="button" value="Gerar tabuada" onclick="Tabuada()"></p>
             </div>
 
 
-            <div><input type="text" name="txt" id="txt" placeholder="Digite um número acima"></div>
+           
 
     
+            <textarea id="textarea" rows="5" style="overflow: scroll;" placeholder="Digite um número acima"></textarea>
 
         </section>
     </main>
