--- a/Guanabara/Aulas/Exercicios/3/index.html
+++ b/Guanabara/Aulas/Exercicios/3/index.html
@@ -14,12 +14,16 @@
     <main>
         <section>
 
-            <div>
-                <p>Início <input type="number" name="txtnum1" id="txtnum1"></p>
-                <p>Fim <input type="number" name="txtnum2" id="txtnum2"></p>
-                <p>Passo: <input type="number" name="passo" id="passo"></p>
-                <input type="button" value="Contar" onclick="contar()">
-            </div>
+           <div id="dados">
+
+            <p>Início: <input type="number" name="inicio" id="txti"></p>
+
+            <p>Fim: <input type="number" name="fim" id="txtf"></p>
+
+            <p>Passo: <input type="number" name="passo" id="txtp"></p>
+            
+            <p><input type="button" value="Contar" onclick="contar()"></p>
+           </div>
 
 
             <div id="res"><p>Preparando contagem...</p></div>
