--- a/Guanabara/Aulas/Exercicios/4/index.html
+++ b/Guanabara/Aulas/Exercicios/4/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Tabuada</title>
 </head>
 <body>
     <header>
@@ -16,15 +16,16 @@
 
 
             <div>
-                <p>Número: <input type="number" name="num" id="num"> <input type="button" value="Gerar tabuada" onclick="Tabuada()"></p>
+                <p>Número : <input type="number" name="nun" id="txtn"> <input type="button" value="Gerar tabuada" onclick="tabuada()"></p>
             </div>
 
 
-           
 
-    
-            <textarea id="textarea" rows="5" style="overflow: scroll;" placeholder="Digite um número acima"></textarea>
-
+            <div>
+                <select name="tabuada" id="seltab" size="10">
+                    <option>Digite um número acima</option>
+                </select>
+            </div>
         </section>
     </main>
     <footer>
