--- a/Guanabara/Treino/Tabuada/index.html
+++ b/Guanabara/Treino/Tabuada/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Dobro, Triplo, Raiz Quadrada</title>
+    <title>Tabuada</title>
 </head>
 <body>
     <header>
-        <h1>Dobro, Triplo, Raiz Quadrada</h1>
+        <h1>Tabuada</h1>
     </header>
     <main>
         <section>
@@ -18,7 +18,7 @@
             <div>Digite um número: 
                 
                 <input type="number" name="" id="txtn">
-                <input type="button" value="Avançar" onclick="calcular()">
+                <input type="button" value="Avançar" onclick="tabuada()">
             
             </div>
 
