--- a/CRUD/Players WR/index.html
+++ b/CRUD/Players WR/index.html
@@ -1,56 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CRUD</title>
-  <link rel="stylesheet" href="style.css">
-  <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+
+
+  <title>Document</title>
+
+
 </head>
-
 <body>
-  <div class="container">
-    <div class="header">
-      <span>Cadastro de Funcionários</span>
-      <button onclick="openModal()" id="new">Incluir</i></button>
-    </div>
 
-    <div class="divTable">
-      <table>
+
+  <div class="container-fluid"></div>
+  <div class="row">
+    <div class="col-md-12">
+      <h3>
+
+        CRUD básico
+        <small class="text-muted">Meu primeiro sistema com operações CRUD básicas</small>
+
+      </h3>
+    </div>
+  </div>
+
+
+
+  <div class="row">
+    <div class="col-md-12">
+      <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#ModalRegistro">Adicionar Itens</button>
+    </div>
+  </div>
+
+
+  <div class="row" style="margin-top: 20px;">
+    <div class="col-md-12">
+      <table id="tblDados" class="table table-hover">
         <thead>
           <tr>
-            <th>Nome</th>
-            <th>Função</th>
-            <th>Salário</th>
-            <th class="acao">Editar</th>
-            <th class="acao">Excluir</th>
+            <th scope="col">#</th>
+            <th scope="col">Nickname</th>
+            <th scope="col">Main</th>
+            <th scope="col">Data de inicio</th>
+            <th scope="col">Rota</th>
           </tr>
         </thead>
         <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>05/08/2000</td>
+            <td>@mdo</td>
+          </tr>
         </tbody>
       </table>
     </div>
+  </div>
 
-    <div class="modal-container">
-      <div class="modal">
-        <form>
-          <label for="m-nome">Nome</label>
-          <input id="m-nome" type="text" required />
-  
-          <label for="m-funcao">Função</label>
-          <input id="m-funcao" type="text" required />
-  
-          <label for="m-salario">Salário</label>
-          <input id="m-salario" type="number" required />
-          <button id="btnSalvar">Salvar</button>
-        </form>
+
+  <!-- Modal -->
+  <div class="modal fade" id="ModalRegistro" tabindex="-1" aria-labelledby="ModalRegistroLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="ModalRegistrolLabel">Registro de Players</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+          <button type="button" class="btn btn-primary">Salvar dados</button>
+        </div>
       </div>
     </div>
-
   </div>
+
+
+
+
+
+
+
+  
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
   <script src="script.js"></script>
 </body>
-
 </html>
