--- a/CRUD/Meu projeto/index.html
+++ b/CRUD/Meu projeto/index.html
@@ -12,7 +12,8 @@
         <input type="text" name="" id="nome" placeholder="Digite o seu nome">
         <input type="number" name="" id="idade" placeholder="Digite a sua idade">
         
-       <input type="submit" value="Enviar" onclick="criar_usuario()">
+       <input type="submit" value="Enviar" onclick="adicionar_usuario ()">
+       <input type="submit" value="Limpa e atualiza" onclick="limpa_usuario ()">
 
     </section>
 
