--- a/CRUD/Meu projeto/index.html
+++ b/CRUD/Meu projeto/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <section>
+    <section id="form">
 
         <input type="text" name="" id="nome" placeholder="Digite o seu nome">
         <input type="number" name="" id="idade" placeholder="Digite a sua idade">
@@ -15,7 +15,7 @@
        <input type="submit" value="Enviar" onclick="adicionar_usuario ()">
        <input type="submit" value="Limpa e atualiza" onclick="limpa_dados ()">
 
-       
+
      
 
     </section>
