--- a/API (Application Programming Interface)/API (Wiki naruto)/index.html
+++ b/API (Application Programming Interface)/API (Wiki naruto)/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+     <!--CND da biblioteca (axios) que permite fazer solicitações HTTP em um navegador da web ou em um servidor. É uma das bibliotecas mais populares para fazer solicitações HTTP em JavaScript.-->
+    
+     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <title>Wiki naruto</title>
 </head>
 <body>
     
-    <section>
-        <div>
-            <h1 id="nome"></h1>
-            <img id="imagem" src="" alt="">
-        </div>
-    </section>
+    <div id="renderResults"></div>
 
 
     <script src="script.js"></script>
